# xopat-deploy

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-installer-linux.yml  build-installer-win.yml  build-wsi-linux.yml  build-wsi-win.yml  build-xopat-linux.yml  build-xopat-win.yml  pypi-publish.yml
envs/: wsi_service.env  xopat_env.json
installer_linux/config/: config.xml
installer_win/: version_info.txt  xopat_tray.py  xopat_tray.spec
installer_win/config/: config.xml
libs/linux/: libopenslide.so.0
notebooks/: demo_jupyterhub.ipynb  demo_local_jupyter.ipynb
pypi/: pyproject.toml
pypi/xopat/: __init__.py  colab.py  download.py  jupyterhub.py  process.py  wsi.py  wsi_service.env  xopat.py
scripts/linux/: build_wsi_service.sh  build_xopat.sh  xopat_package.json
scripts/run/: run_wsi_service.py  run_wsi_service_win.py
scripts/specs/: wsi_service_linux.spec  wsi_service_win.spec
scripts/windows/: build_wsi_service.ps1  build_xopat.ps1
