[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xopat"
version = "0.1.2"
description = "Launch WSI-Service backend and xOpat"
requires-python = ">=3.9"
dependencies = [
    "ipython"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xopat*"]

[tool.setuptools.package-data]
xopat = ["wsi_service.env"]